tests/snapshots/examples_fixtures/base__base_duplicate_except_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_duplicate_except_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E079]: INVALID BASE DIRECTIVE

Duplicate Base exclusion `print`.

  --> examples/base/base_duplicate_except_error.flx:3:1
  |
3 | import Base except [print, print]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Each name in `import Base except [...]` must appear only once.
== stdout ==
<not executed>
